<resources>
    <string name="app_name">Order it!</string>
    <string name="title_activity_order">Order Details</string>
    <string name="title_activity_table_list">Tables</string>
    <string name="title_activity_table_status">Table Status</string>
    <string name="title_activity_manage_bill">Bill</string>

    <string name="staff_id">Staff Id</string>
    <string name="order_id">Order Id</string>
    <string name="table_number">Table #</string>
    <string name="quantity">Qty</string>
    <string name="item">Item</string>
    <string name="code">Code</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="order_btn">Order</string>
    <string name="pay_btn">Pay</string>
    <string name="reset_btn">Reset</string>
    <string name="finish_btn">Finish</string>

    <string name="table_name_exp">Table 1</string>
    <string name="table_stat_exp">Ordering</string>
    <string name="order_name_exp">Sapporo</string>
    <string name="order_time_exp">10m</string>
    <string name="order_quantity_exp">x2</string>
    <string name="order_price_exp">20.000</string>

    <string name="txt_username_hint">Tên đăng nhập</string>
    <string name="txt_password_hint">Mật khẩu</string>
    <string name="txt_search_hint">Search</string>
    <string name="btnLogin">ĐĂNG NHẬP</string>
    <string name="tbl_stt_heading_txt">Status</string>
    <string name="tbl_stt_indicator_txt">Occupied</string>
    <string name="tbl_order_heading_txt">Order</string>
    <string name="tbl_order_indicator_txt">Not Started</string>
    <string name="tbl_bill_indicator_txt">$0</string>
    <string name="tbl_bill_heading_txt">Bill</string>
    <string name="tbl_reserve_heading_txt">Reservation</string>

    <string name="msg_sign_out">Do you want to sign out?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>

    <string name="msg_login_error">Tên đăng nhập hoặc mật khẩu không đúng.</string>

    <string-array name="qty_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="table_status_available">Available</string>
    <string name="table_status_not_available">Not Available</string>
    <string name="table_status_starter">Starter</string>
    <string name="table_status_main">Mains</string>
    <string name="table_status_dessert">Dessert</string>
    <string name="table_status_drink">Drinks</string>

    <string name="order_category_starter">Starter</string>
    <string name="order_category_main">Mains</string>
    <string name="order_category_dessert">Dessert</string>
    <string name="order_category_drink">Drinks</string>
    <string name="order_category_recent">Recent</string>
    <string name="order_category_favorite">Top Ranking</string>
</resources>
