<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.TableOrderActivity"
    tools:showIn="@layout/activity_table_order"
    android:id="@+id/tableOrder">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/orderDetails"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/staff_id"
            android:id="@+id/staff_id_lbl"
            />
        <Space />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="10001"
            android:id="@+id/staff_id_txt"
            android:layout_columnSpan="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/order_id"
            android:id="@+id/order_id_lbl"/>
        <Space />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="109"
            android:id="@+id/order_id_txt"
            android:layout_columnSpan="2"/>

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/table_number"
            android:id="@+id/tbl_nbr_lbl"/>
        <Space
            android:layout_width="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="1"
            android:id="@+id/tbl_nbr_txt"/>

    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orderItemsHeader"
        android:layout_below="@id/orderDetails"
        android:columnCount="8"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:useDefaultMargins="true"
        android:scrollbars="vertical">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no"
            android:id="@+id/item_no_lbl"
            android:layout_width="wrap_content"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/code"
            android:id="@+id/item_code_lbl"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_width="60dp"
            android:maxWidth="60dp"/>
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/item"
            android:id="@+id/item_name_lbl"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_width="120dp"
            android:maxWidth="60dp" />
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quantity"
            android:id="@+id/item_quantity_lbl"
            android:layout_width="wrap_content" />
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cancel"
            android:id="@+id/item_cancel_lbl"
            android:layout_gravity="center"
            android:layout_width="wrap_content" />

    </GridLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderItemsHeader">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderItems"
            android:layout_below="@id/orderDetails"
            android:columnCount="8"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:useDefaultMargins="true">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="1"
                android:id="@+id/textView"
                android:layout_row="0"
                android:layout_column="0" />

            <EditText
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"/>

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnSpan="3"
                android:layout_gravity="fill"/>

            <Spinner
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/qty_spinner"
                android:layout_row="0"
                android:layout_column="6"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:id="@+id/button"
                android:layout_row="0"
                android:layout_column="7"
                android:layout_gravity="center"/>
        </GridLayout>
    </ScrollView>


</RelativeLayout>
