<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >
    <TextView
        android:id="@+id/tvOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_centerVertical="true"
        android:text="@string/order_name_exp"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/order_price_exp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSinglePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tvTotalPrice"
        android:text="@string/order_price_exp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dip"
        android:layout_alignTop="@+id/tvOrderName"
        android:layout_toLeftOf="@+id/tvTotalPrice"
        android:text="@string/order_quantity_exp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dip"
        android:layout_alignTop="@+id/tvOrderName"
        android:layout_toLeftOf="@+id/tvQuantity"
        android:text="@string/order_quantity_exp"
        android:textSize="20sp" />

</RelativeLayout>