<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="orderit.mainapp.activity.TableStatusActivity">

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle">
        <ImageView
            android:id="@+id/tbl_stt_img"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/busy_status"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/status_img_margin"/>


        &lt;!&ndash;Table Name&ndash;&gt;
        <TextView
            android:id="@+id/tbl_stt_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_stt_heading_txt"
            android:textColor="#040404"
            android:textSize="22sp"
            android:typeface="sans"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tbl_stt_img"
            android:layout_toRightOf="@id/tbl_stt_img" />
        &lt;!&ndash; Table Status &ndash;&gt;
        <TextView
            android:id="@+id/tbl_stt_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_stt_indicator_txt"
            android:textColor="#909090"
            android:textSize="20sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingEnd="32dp"
            android:layout_alignParentRight="true"
            android:paddingRight="32dp" />
        </RelativeLayout>-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle"
        >
        <ImageView
            android:id="@+id/tbl_reserve_img"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/reserve_status"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/status_img_margin"/>


        <!--Table Name-->
        <TextView
            android:id="@+id/tbl_reserve_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_reserve_heading_txt"
            android:textColor="#040404"
            android:textSize="22sp"
            android:typeface="sans"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tbl_reserve_img"
            android:layout_toRightOf="@id/tbl_reserve_img" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle"
        >
        <ImageView
            android:id="@+id/tbl_order_img"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/free_status"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/status_img_margin"/>


        <!--Table Name-->
        <TextView
            android:id="@+id/tbl_order_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_order_heading_txt"
            android:textColor="#040404"
            android:textSize="24sp"
            android:typeface="sans"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tbl_order_img"
            android:layout_toRightOf="@id/tbl_order_img" />
        <!-- Table Status -->
        <TextView
            android:id="@+id/tbl_order_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_order_indicator_txt"
            android:textColor="#909090"
            android:textSize="20sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tbl_order_right_arrow"/>
        <!-- Rightend Arrow -->
        <ImageView
            android:id="@+id/tbl_order_right_arrow"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerVertical="true"
        android:background="@drawable/rectangle"
        >
        <ImageView
            android:id="@+id/tbl_bill_img"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/free_status"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/status_img_margin"/>


        <!--Table Name-->
        <TextView
            android:id="@+id/tbl_bill_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_bill_heading_txt"
            android:textColor="#040404"
            android:textSize="22sp"
            android:typeface="sans"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tbl_bill_img"
            android:layout_toRightOf="@id/tbl_bill_img" />
        <!-- Table Status -->
        <TextView
            android:id="@+id/tbl_bill_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbl_bill_indicator_txt"
            android:textColor="#909090"
            android:textSize="20sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tbl_bill_right_arrow"/>
        <!-- Rightend Arrow -->
        <ImageView
            android:id="@+id/tbl_bill_right_arrow"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" />
    </RelativeLayout>
</LinearLayout>
