<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="orderit.mainapp.activity.TableOrder2Activity"
    tools:showIn="@layout/activity_table_order2"
    android:id="@+id/tableOrder">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="21"
        android:layout_alignParentEnd="true"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/staff_id"
            android:id="@+id/staff_id_lbl"
            android:layout_column="0"
            android:layout_row="0" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="0"
            android:layout_column="1" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="0"
            android:layout_column="2" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="0"
            android:layout_column="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="10001"
            android:id="@+id/staff_id_txt"
            android:layout_row="0"
            android:layout_column="15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/order_id"
            android:id="@+id/order_id_lbl"
            android:layout_row="1"
            android:layout_column="0" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/table_number"
            android:id="@+id/tbl_nbr_lbl"
            android:layout_column="0"
            android:layout_row="4" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="109"
            android:id="@+id/order_id_txt"
            android:layout_row="1"
            android:layout_column="15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="1"
            android:id="@+id/tbl_nbr_txt"
            android:layout_row="4"
            android:layout_column="15" />

    </GridLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gridLayout"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="No"
                android:id="@+id/no_lbl"
                android:layout_column="0" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Code"
                android:id="@+id/code_lbl"
                android:layout_column="2" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="6" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="7" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Item"
                android:id="@+id/item_lbl"
                android:layout_column="9" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="10" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="11" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="12" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="13" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="14" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="15" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="16" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="17" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="18" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="19" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Quantity"
                android:id="@+id/quantity_lbl"
                android:layout_column="20" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="27" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="28" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="29" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Cancel"
                android:id="@+id/cancel_lbl"
                android:layout_column="30" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="1"
                android:id="@+id/textView"
                android:layout_column="0" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_column="2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_column="7"
                android:layout_span="12" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_column="20" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_column="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Cancel" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>

</RelativeLayout>
